# EIVU

./: .gitignore  README.md  eval_base.sh  eval_fast.sh  fasterize.sh  meson.build  meson.options  perfrun.sh  run.sh  zero_copy.sh
eval/: clock.html  factors.html  fundamental.html  index.html  style.css
eval/corei9_11gen/: details.html  factors.html  summary.html
eval/corei9_11gen/base/coupled/batch-1024/: perf-0.txt  perf-128.txt  perf-16.txt  perf-64.txt  perf-8.txt  result-0.txt  result-128.txt  result-16.txt  result-2.txt  result-4.txt  result-8.txt
eval/corei9_11gen/base/coupled/batch-256/: perf-16.txt  perf-2.txt  perf-32.txt  perf-4.txt  perf-8.txt  result-0.txt  result-16.txt  result-256.txt  result-32.txt  result-4.txt
eval/corei9_11gen/base/coupled/batch-32/: perf-0.txt  perf-128.txt  perf-16.txt  perf-256.txt  result-128.txt  result-256.txt  result-8.txt
eval/corei9_11gen/base/coupled/batch-512/: perf-128.txt  perf-16.txt  perf-2.txt  perf-32.txt  perf-64.txt  perf-8.txt  result-16.txt  result-2.txt  result-256.txt  result-32.txt  result-64.txt  result-8.txt
eval/corei9_11gen/factors/: batchsz_nf.html  batchsz_rx.html  batchsz_tx.html  cpy_nf.html  cpy_rx.html  cpy_tx.html  desc_nf.html  desc_rx.html  desc_tx.html  pasz_nf.html  pasz_rx.html  pasz_tx.html  vhdr_nf.html  vhdr_rx.html  vhdr_tx.html
eval/corei9_11gen/fast/coupled/batch-1024/: perf-128.txt  perf-16.txt  perf-2.txt  perf-32.txt  result-0.txt  result-128.txt  result-16.txt  result-4.txt
eval/corei9_11gen/fast/coupled/batch-256/: perf-128.txt  perf-16.txt  perf-4.txt  result-128.txt  result-2.txt  result-256.txt  result-32.txt  result-4.txt  result-64.txt  result-8.txt
eval/corei9_11gen/fast/coupled/batch-32/: perf-16.txt  perf-2.txt  perf-256.txt  perf-4.txt  result-128.txt  result-32.txt  result-8.txt
eval/corei9_11gen/fast/coupled/batch-512/: perf-0.txt  perf-16.txt  perf-2.txt  perf-4.txt  result-128.txt  result-16.txt  result-32.txt  result-4.txt
eval/corei9_11gen/fundamental/: details.html  nf.html  rx.html  summary.html  tx.html
eval/corei9_11gen/fundamental/base/nm/: batchsz32.perf  batchsz512.perf
eval/coreultra_15gen/: details.html  summary.html
eval/coreultra_15gen/base/coupled/batch-1024/: perf-128.txt  perf-16.txt  perf-2.txt  perf-256.txt  perf-32.txt  perf-4.txt  perf-64.txt  perf-8.txt  result-0.txt  result-128.txt  result-16.txt  result-2.txt  result-32.txt  result-4.txt  result-64.txt
eval/coreultra_15gen/base/coupled/batch-256/: perf-0.txt  perf-128.txt  perf-16.txt  perf-256.txt  perf-8.txt  result-0.txt  result-16.txt  result-256.txt  result-32.txt  result-4.txt  result-8.txt
eval/coreultra_15gen/base/coupled/batch-32/: perf-128.txt  perf-16.txt  perf-2.txt  perf-256.txt  (+8 more)
eval/coreultra_15gen/fundamental/: details.html  nf.html  rx.html  summary.html  tx.html
eval/threadripper/: details.html  summary.html
eval/threadripper/fundamental/: details.html  nf.html  rx.html  summary.html  tx.html
eval/xeon/: clockrate.html  details.html  summary.html
eval/xeon/cpurate/: cpurate_nf.html  cpurate_rx.html  cpurate_tx.html
eval/xeon/fundamental/: details.html  nf.html  rx.html  summary.html  tx.html
eval/xeon/memrate/: memrate_nf.html  memrate_rx.html  memrate_tx.html
lib/: mbuf.h  memobj.h  meson.build  option.h  perf.h  pkt.h  shm.h  vhost.h  vio.h  vio_hdr.h  vioqueue.h
lib/common/: mbuf_core.h  memobj.h  mpools.h  option.h  perf.h  pkt.h  ring.h  shm.h  stack.h  vhost.h  vio.h  vio_hdr.h  vioqueue.h
lib/integrated_md/: mbuf.h  mpools.h  vioqueue_ops.h
lib/mbuf/: meson.build
lib/mbuf/common/: mbuf_core.h  pktbuf_get_put.h
lib/mbuf/guest_led/: desc.h  mbuf_idx.h  memcpy_md.h  vio_reset_md.h
lib/mbuf/host_led/: desc.h  mbuf_idx.h  memcpy_md.h  vio_reset_md.h
lib/mbuf/integrated_md/: aggregated_md.h  desc.h  mbuf.h  md_get_put.h  mpools.h  vioqueue_ops.h
lib/mbuf/md_buf/: meson.build
lib/mbuf/md_buf/common/: mdque.h
lib/mbuf/md_buf/integrated_md/: aggregated_md.h  mbuf.h  mpools.h
lib/mbuf/md_buf/separated_md/: meson.build
lib/mbuf/md_buf/separated_md/aggregated_md/: aggregated_md.h  meson.build  mpools.h
lib/mbuf/md_buf/separated_md/aggregated_md/mpool/: aggregated_md.h  mbuf.h
lib/mbuf/md_buf/separated_md/aggregated_md/reuse/: aggregated_md.h  mbuf.h  md_get_put.h
lib/mbuf/md_buf/separated_md/individual_md/: meson.build
lib/mbuf/md_buf/separated_md/individual_md/common/: aggregated_md.h  mbuf_idx.h
lib/mbuf/md_buf/separated_md/individual_md/mpool/: meson.build
lib/mbuf/md_buf/separated_md/individual_md/mpool/each_mpool/: mbuf.h  mpools.h
lib/mbuf/md_buf/separated_md/individual_md/mpool/same_mpool/: mbuf.h  mpools.h
lib/mbuf/md_buf/separated_md/individual_md/reuse/: mbuf.h  mpools.h
lib/mbuf/md_que/: aggregated_md.h  mbuf.h  mdque.h  mpools.h
lib/mbuf/separated_md/: meson.build
lib/mbuf/separated_md/aggregated_md/: aggregated_md.h  mbuf.h  mbuf_idx.h
lib/mbuf/separated_md/common/: desc.h
lib/mbuf/separated_md/individual_md/: meson.build
lib/mbuf/separated_md/individual_md/common/: aggregated_md.h  mbuf_idx.h
lib/mbuf/separated_md/individual_md/mpool/: meson.build
lib/mbuf/separated_md/individual_md/mpool/each_mpool/: mbuf.h
lib/mbuf/separated_md/individual_md/reuse/: md_get_put.h
lib/mbuf/separated_md/mpool/: meson.build
lib/mbuf/separated_md/mpool/common/: mbuf.h  vioqueue_ops.h
lib/mbuf/separated_md/mpool/each_mpool/: mbuf.h  mpools.h
lib/mbuf/separated_md/reuse/: mbuf.h  md_get_put.h
lib/separated_md/: meson.build
lib/separated_md/common/: mbuf_struct.h
lib/separated_md/each_mpool/: mbuf.h  mpools.h
lib/vnwio/: meson.build  vhost.h  vio.h  vio_hdr.h  vioqueue.h
src/: nf.c  rx.c  tx.c
test/: memobj_test.c  meson.build  pktverif_test.c  unlink_shm.c
tools/: batch-build-all.sh  batch-build-coupled.sh  batch-build-decoupled.sh  batch-build-factors.sh  batch-build-step2-factors.sh  batch-run-all.sh  batch-run-coupled.sh  batch-run-decoupled.sh  batch-run-factors.sh  batch-run-step2-factors.sh
tools/run/: batch-run-coupled.sh  batch-run-decoupled.sh  batch-run-factors.sh
(+2866 files in other folders)
