# general
option('developer_mode', type : 'boolean', value : false, description :
       'verificate pkts to debug')
option('fastest_mode', type : 'boolean' , value : false, description :
       'change parameters for the fastest combination')
option('metadata_size', type : 'integer', min : 0, max : 128, value : 128)
option('headroom_size', type : 'integer', min : 0, max : 128, value : 128)
option('dataroom_size', type : 'integer', min : 60, max : 2048, value : 2048)
option('zero_copy', type : 'boolean', value : false, description :
       'skip packet copy')
option('vio_header', type : 'boolean', value : true, description :
       'header added for H/W offload in virtual network I/O')

# patterns of Mbuf
option('separated_md', type : 'boolean', value : false, description :
       'separate metadata area from Mbuf')
option('reuse', type : 'boolean', value : false, description :
       'reuse metadata area reserved for the number of batch')
option('aggregated_md', type : 'boolean', value : false, description :
       'aggregate metadata for each packet')
option('md_queue', type : 'boolean', value : false, description :
       'Vioqueue plays a role as metadata area')
option('memcpy_md', type : 'boolean', value : false, description :
       'Host memcpy metadata')
option('host_aggregated_md', type : 'boolean', value : false, description :
       'Host aggregate metadata for each packet')
option('aggregation_num', type : 'integer', min : 1, value : 1)
